# weather

./: LICENSE  Makefile  stack.yaml  weather.cabal
app/: Main.hs
src/Data/: Foldl.hs  Observation.hs
test/: Test.hs
