name:                weather
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bens/weather#readme
license:             BSD3
license-file:        LICENSE
author:              Ben Sinclair
maintainer:          ben.d.sinclair@gmail.com
copyright:           2017 Ben Sinclair
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Foldl
                       Data.Observation
  ghc-options:         -Wall
  build-depends:       attoparsec
                     , base
                     , comonad
                     , containers
                     , deepseq
                     , lens
                     , QuickCheck
                     , strict
                     , text
                     , time
                     , transformers
                     , vector
                     , vector-builder
  default-language:    Haskell2010

executable weather-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O3
  build-depends:       weather
                     , base
                     , attoparsec
                     , comonad
                     , containers
                     , lens
                     , machines
                     , QuickCheck
                     , text
                     , transformers
                     , time
                     , vector
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test src
  other-modules:       Data.Foldl
                       Data.Observation
  main-is:             Test.hs
  build-depends:       attoparsec
                     , base
                     , comonad
                     , containers
                     , deepseq
                     , lens
                     , QuickCheck
                     , strict
                     , tasty
                     , tasty-quickcheck
                     , text
                     , time
                     , transformers
                     , vector
                     , vector-builder
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bens/weather
