name:                weather
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bens/weather#readme
license:             BSD3
license-file:        LICENSE
author:              Ben Sinclair
maintainer:          ben.d.sinclair@gmail.com
copyright:           2017 Ben Sinclair
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Foldl
                       Data.Observation
  ghc-options:         -Wall
  build-depends:       attoparsec
                     , base == 4.9.1.0
                     , comonad == 5.0.1
                     , containers == 0.5.7.1
                     , deepseq == 1.4.2.0
                     , lens == 4.15.2
                     , QuickCheck == 2.9.2
                     , strict == 0.3.2
                     , text == 1.2.2.1
                     , time == 1.6.0.1
                     , transformers == 0.5.2.0
                     , vector == 0.12.0.1
                     , vector-builder == 0.3.1
  default-language:    Haskell2010

executable weather-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O3
  build-depends:       weather
                     , base == 4.9.1.0
                     , attoparsec == 0.13.1.0
                     , comonad == 5.0.1
                     , containers == 0.5.7.1
                     , lens == 4.15.2
                     , machines == 0.6.2
                     , QuickCheck == 2.9.2
                     , text == 1.2.2.1
                     , transformers == 0.5.2.0
                     , time == 1.6.0.1
                     , vector == 0.12.0.1
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test src
  other-modules:       Data.Foldl
                       Data.Observation
  main-is:             Test.hs
  build-depends:       attoparsec == 0.13.1.0
                     , base == 4.9.1.0
                     , comonad == 5.0.1
                     , containers == 0.5.7.1
                     , deepseq == 1.4.2.0
                     , lens == 4.15.2
                     , QuickCheck == 2.9.2
                     , strict == 0.3.2
                     , tasty == 0.11.2.1
                     , tasty-quickcheck == 0.8.4
                     , text == 1.2.2.1
                     , time == 1.6.0.1
                     , transformers == 0.5.2.0
                     , vector == 0.12.0.1
                     , vector-builder == 0.3.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bens/weather
